about section completed

--- a/01_Trivix_EduHub/index.html
+++ b/01_Trivix_EduHub/index.html
@@ -123,24 +123,22 @@
         </div>
         <div class="about-div">
           <div class="icon">
-            <img src="./images/research.png" alt="about research img" />
+            <img src="./images/design.png" alt="about design img" />
           </div>
-          <h3 class="about-div--heading">Research</h3>
+          <h3 class="about-div--heading">Design</h3>
           <p class="about-div--para">
-            We start by learning what you need. We look at what's new and
-            exciting in learning and choose topics that match what you want to
-            learn.
+            Next, we make the lessons. We make them fun and interesting for you.
+            We make sure they work for different ways people like to learn.
           </p>
         </div>
         <div class="about-div">
           <div class="icon">
-            <img src="./images/research.png" alt="about research img" />
+            <img src="./images/Coding.png" alt="about coding img" />
           </div>
-          <h3 class="about-div--heading">Research</h3>
+          <h3 class="about-div--heading">Development</h3>
           <p class="about-div--para">
-            We start by learning what you need. We look at what's new and
-            exciting in learning and choose topics that match what you want to
-            learn.
+            After that, we turn the lessons into things you can use online. We
+            use the latest tools to make sure they work well and make you happy.
           </p>
         </div>
       </div>
