--- a/01_Trivix_EduHub/index.html
+++ b/01_Trivix_EduHub/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -101,8 +101,8 @@
 
     <section class="section-about">
       <div class="container">
-        <h2 class="section-about-heading">About Trivix EduHub</h2>
-        <p class="section-about-para">
+        <h2 class="section-common-heading">About Trivix EduHub</h2>
+        <p class="section-common-para">
           Guiding Your Learning Journey through Research, Design, and
           Development Excellence, and a Passion for Coding. Our platform
           emphasizes hands-on coding experience, helping learners build
@@ -143,5 +143,117 @@
         </div>
       </div>
     </section>
+
+    <!-- section-about ends here -->
+
+    <!-- section course starts here -->
+    <section class="section-course">
+      <div class="container">
+        <h2 class="section-common-heading">Explore our Courses</h2>
+        <p class="section-common-para">
+          Discover a wide range of courses designed to boost your skills in
+          programming, web development, data science, and more. Whether you're a
+          beginner or looking to advance your expertise, our curated curriculum
+          and hands-on projects will help you achieve your learning goals.
+        </p>
+      </div>
+
+      <div class="container grid grid-col--four">
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-html5 html"></i>
+          </div>
+          <h3 class="course-div--heading">HTML5 Essentials</h3>
+          <p class="course-div--para">
+            Master the building blocks of the web with HTML5. Learn to structure
+            web pages, use semantic tags, embed media, and create accessible,
+            SEO-friendly content for modern websites.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-css3-alt css"></i>
+          </div>
+          <h3 class="course-div--heading">CSS3 & Responsive Design</h3>
+          <p class="course-div--para">
+            Unlock the power of CSS3 to style beautiful, responsive websites.
+            Explore layouts, animations, Flexbox, Grid, and media queries to
+            ensure your sites look great on any device.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-js js"></i>
+          </div>
+          <h3 class="course-div--heading">JS Development</h3>
+          <p class="course-div--para">
+            Dive into JavaScript fundamentals, ES6+, and modern frameworks.
+            Build interactive web applications, master DOM manipulation, and
+            gain hands-on experience with real-world projects to boost your
+            development skills.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-react react"></i>
+          </div>
+          <h3 class="course-div--heading">React Development</h3>
+          <p class="course-div--para">
+            Learn React from the ground up. Build dynamic user interfaces,
+            manage state efficiently, and create scalable single-page
+            applications. Apply your knowledge with hands-on projects and modern
+            development tools.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-java java"></i>
+          </div>
+          <h3 class="course-div--heading">Java Development</h3>
+          <p class="course-div--para">
+            Master Java from core concepts to advanced programming. Build robust
+            applications, understand object-oriented principles, and work with
+            frameworks. Develop practical skills through hands-on coding and
+            real-world projects.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-brands fa-python python"></i>
+          </div>
+          <h3 class="course-div--heading">Python Development</h3>
+          <p class="course-div--para">
+            Learn Python from the basics to advanced topics. Explore data
+            analysis, automation, web development, and machine learning. Work on
+            practical projects to strengthen your programming and
+            problem-solving skills.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-solid fa-database sql"></i>
+          </div>
+          <h3 class="course-div--heading">SQL & Databases</h3>
+          <p class="course-div--para">
+            Learn SQL fundamentals, database design, and querying techniques.
+            Work with relational databases like MySQL and PostgreSQL to manage,
+            retrieve, and analyze data efficiently.
+          </p>
+        </div>
+        <div class="course-div">
+          <div class="icon">
+            <i class="fa-solid fa-leaf mongo"></i>
+          </div>
+          <h3 class="course-div--heading">MongoDB & NoSQL</h3>
+          <p class="course-div--para">
+            Explore NoSQL databases with MongoDB. Learn about document storage,
+            CRUD operations, schema design, and integrating MongoDB with modern
+            web applications.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- section course ends here -->
   </body>
 </html>
