contact home pape completed

--- a/01_Trivix_EduHub/index.html
+++ b/01_Trivix_EduHub/index.html
@@ -165,9 +165,9 @@
           </div>
           <h3 class="course-div--heading">HTML5 Essentials</h3>
           <p class="course-div--para">
-            Master the building blocks of the web with HTML5. Learn to structure
-            web pages, use semantic tags, embed media, and create accessible,
-            SEO-friendly content for modern websites.
+            Master the building blocks of the web developent with HTML5. Learn
+            to structure web pages, use semantic tags, embed media, and create
+            accessible, SEO-friendly content for modern websites.
           </p>
         </div>
         <div class="course-div">
@@ -176,9 +176,9 @@
           </div>
           <h3 class="course-div--heading">CSS3 & Responsive Design</h3>
           <p class="course-div--para">
-            Unlock the power of CSS3 to style beautiful, responsive websites.
-            Explore layouts, animations, Flexbox, Grid, and media queries to
-            ensure your sites look great on any device.
+            Unlock the power of CSS3 to style beautiful, responsive websites and
+            modern design. Explore layouts, animations, Flexbox, Grid, and media
+            queries to ensure your sites look great on any device.
           </p>
         </div>
         <div class="course-div">
@@ -237,7 +237,8 @@
           <p class="course-div--para">
             Learn SQL fundamentals, database design, and querying techniques.
             Work with relational databases like MySQL and PostgreSQL to manage,
-            retrieve, and analyze data efficiently.
+            retrieve, and analyze data efficiently.Learn how to insert data from
+            forms to databases.
           </p>
         </div>
         <div class="course-div">
@@ -246,14 +247,130 @@
           </div>
           <h3 class="course-div--heading">MongoDB & NoSQL</h3>
           <p class="course-div--para">
-            Explore NoSQL databases with MongoDB. Learn about document storage,
-            CRUD operations, schema design, and integrating MongoDB with modern
+            Explore NoSQL databases with MongoDB. Learn about No relataional
+            databses, document storage, CRUD operations, schema design, and
+            integrating with various technlogies with MongoDB and with modern
             web applications.
           </p>
         </div>
       </div>
     </section>
-
     <!-- section course ends here -->
+
+    <!-- why choose us section starts-->
+    <section class="why-choose--section">
+      <div class="container">
+        <h2 class="section-common-heading">Why Choose Us</h2>
+        <p class="section-common-para">
+          Discover what sets Trivix EduHub apart. Our step-by-step approach,
+          expert instructors, and hands-on learning ensure you gain real-world
+          skills and confidence. Here’s why learners trust us:
+        </p>
+      </div>
+      <div class="container grid grid-col--three">
+        <div class="choose-left--div">
+          <div class="choose-div--one">
+            <div class="icon">
+              <i class="fa-solid fa-1"></i>
+            </div>
+            <h3 class="choose-div--heading">Personalized Learning</h3>
+            <p class="choose-div--para">
+              Courses tailored to your needs and skill level, ensuring you learn
+              at your own pace and focus on what matters most to you.
+            </p>
+          </div>
+          <div class="choose-div--two">
+            <div class="icon">
+              <i class="fa-solid fa-2"></i>
+            </div>
+            <h3 class="choose-div--heading">Expert Instructors</h3>
+            <p class="choose-div--para">
+              Learn from industry professionals and passionate educators with
+              real-world experience and a commitment to your success.
+            </p>
+          </div>
+          <div class="choose-div--three">
+            <div class="icon">
+              <i class="fa-solid fa-3"></i>
+            </div>
+            <h3 class="choose-div--heading">Hands-on Projects</h3>
+            <p class="choose-div--para">
+              Apply your knowledge with practical projects and coding exercises
+              that build your portfolio and boost your confidence.
+            </p>
+          </div>
+        </div>
+
+        <div class="choose-center--div">
+          <span class="wave"></span>
+          <span class="wave wave2"></span>
+          <span class="wave wave3"></span>
+          <div class="mobile-portrait">
+            <img src="./images/mobile.PNG" alt="mobile" width="70%" />
+          </div>
+        </div>
+
+        <div class="choose-right--div">
+          <div class="choose-div--one">
+            <div class="icon">
+              <i class="fa-solid fa-4"></i>
+            </div>
+            <h3 class="choose-div--heading">Community Support</h3>
+            <p class="choose-div--para">
+              Join a vibrant community of learners and mentors. Get help, share
+              ideas, and grow together through forums and group activities.
+            </p>
+          </div>
+          <div class="choose-div--two">
+            <div class="icon">
+              <i class="fa-solid fa-5"></i>
+            </div>
+            <h3 class="choose-div--heading">Flexible Learning</h3>
+            <p class="choose-div--para">
+              Access courses anytime, anywhere, and on any device. Learn at your
+              convenience with lifetime access to course materials.
+            </p>
+          </div>
+          <div class="choose-div--three">
+            <div class="icon">
+              <i class="fa-solid fa-6"></i>
+            </div>
+            <h3 class="choose-div--heading">Career Advancement</h3>
+            <p class="choose-div--para">
+              Gain skills that employers value. Receive certificates, career
+              guidance, and resources to help you achieve your professional
+              goals.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- why choose us section ends here -->
+
+    <!-- contact home section -->
+
+    <div class="contact-section-homepage" id="contact-section-homepage">
+      <div class="container grid grid-col--two">
+        <div class="contact-content">
+          <h2 class="contact-title">Let's revolutionize the way you study</h2>
+          <p>Join our free bootcamp to know us better</p>
+          <button class="btn">
+            <a href="./contact.html"
+              >Start Now <i class="fa-solid fa-arrow-right-long"></i
+            ></a>
+          </button>
+        </div>
+
+        <div class="contact-image">
+          <img src="./images/main.png" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <!-- contact home section -->
+
+    <!-- Footer section start here -->
+
+    <!-- Footer section ends here -->
   </body>
 </html>
