--- a/01_Trivix_EduHub/index.html
+++ b/01_Trivix_EduHub/index.html
@@ -370,6 +370,57 @@
     <!-- contact home section -->
 
     <!-- Footer section start here -->
+    <footer class="section-footer">
+      <div class="container grid grid-col--four">
+        <div class="footer-div-1">
+          <h2 class="footer-title">Trivix EduHub</h2>
+          <p class="footer-para">
+            Empowering learners worldwide with quality education and hands-on
+            coding.
+          </p>
+          <div class="social-icons">
+            <a href="https://discord.com/" target="_blank"
+              ><i class="fa-brands fa-discord"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </div>
+        </div>
+        <div class="footer-div-2">
+          <h2>Quick Links</h2>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Courses</a></li>
+            <li><a href="./blog.html">Blogs</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-div-3">
+          <h2>Read Our Blogs</h2>
+          <ul>
+            <li><a href="./blog.html#html5-tips">HTML5 Tips</a></li>
+            <li><a href="./blog.html#css-responsive">Responsive CSS</a></li>
+            <li><a href="./blog.html#js-projects">JS Projects</a></li>
+            <li><a href="./blog.html#react-hooks">React Hooks</a></li>
+            <li><a href="./blog.html#python-data">Python Data</a></li>
+          </ul>
+        </div>
+        <div class="footer-div-4">
+          <h2>Office Address :</h2>
+          <p>Trivix EduHub</p>
+          <p>3rd Floor, Grand place Bulding</p>
+          <p>MG Road, Bengaluru-560024</p>
+          <br />
+          <p>Mob : +91 8156526525</p>
+        </div>
+      </div>
+      <div class="copyroght">© 2025 Trivix EduHub. All rights reserved.</div>
+    </footer>
 
     <!-- Footer section ends here -->
   </body>
