made the website responsive

--- a/01_Trivix_EduHub/index.html
+++ b/01_Trivix_EduHub/index.html
@@ -62,7 +62,7 @@
               accessible education for learners of all ages and backgrounds.
             </p>
             <button class="btn btn-hero">
-              <a href="./services.html">Learn With Us -></a>
+              <a href="./services.html">Learn With Us</a>
             </button>
           </div>
           <div class="section-hero-image">
