--- a/01_Trivix_EduHub/contact.html
+++ b/01_Trivix_EduHub/contact.html
@@ -61,7 +61,7 @@
 
       <div class="container grid grid-col--two">
         <div class="contact-content">
-          <form action="#">
+          <form action="https://formspree.io/f/xeokylny" method="POST">
             <div class="grid grid-col--two mb-3">
               <div>
                 <label for="full-name">First Name</label>
@@ -103,7 +103,7 @@
                 name="message"
                 id="message"
                 cols="30"
-                rows="10"
+                rows="6"
                 required
                 autocomplete="off"
                 placeholder="Enter your message here"
@@ -118,7 +118,7 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62197.58416314634!2d77.61660507553532!3d13.013432747856443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae114c1eb8a05f%3A0x865d2ab38d2643d2!2sApponix%20Academy!5e0!3m2!1sen!2sin!4v1752079320479!5m2!1sen!2sin"
             width="600"
-            height="500"
+            height="420"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
