added some SEO content

--- a/01_Trivix_EduHub/blog.html
+++ b/01_Trivix_EduHub/blog.html
@@ -3,6 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Trivix EduHub - Empowering lifelong learning with high-quality courses in programming, web development, data science, and more. Join our expert-led bootcamps and hands-on projects to unlock your potential."
+    />
+    <meta
+      name="keywords"
+      content="Trivix EduHub, online courses, programming, web development, data science, coding bootcamp, HTML5, CSS3, JavaScript, React, Python, SQL, MongoDB, education, lifelong learning"
+    />
+    <meta name="author" content="Trivix EduHub Team" />
+    <meta property="og:title" content="Trivix EduHub - Unlock Your Potential" />
+    <meta
+      property="og:description"
+      content="Join Trivix EduHub for expert-led courses, hands-on coding, and a vibrant learning community. Start your journey today!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://trivixeduhub.com/" />
+    <meta
+      property="og:image"
+      content="https://trivixeduhub.com/images/main-hero.png"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -11,7 +31,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Trivix EduHub</title>
+    <title>Blogs -Trivix EduHub</title>
   </head>
   <body>
     <!-- Navbar start -->
